# sound-process-base

./: .gitignore  Base_Plotter.h  CMakeLists.txt  CombFilterAnalyser.cpp  CombFilterAnalyser.h  CombFunction.cpp  CombFunction.h  GnuplotPlotter.cpp  GnuplotPlotter.h  PhaseSpaceAnalyser.cpp  PhaseSpaceAnalyser.h  README.md  SineFunction.cpp  SineFunction.h  ToFilePlotter.cpp  ToFilePlotter.h  WavFileHander.cpp  WavFileHander.h  WaveFunction.h  analyser.h  main.cpp
